Atualização Jogo da Velha

--- a/jogo-velha/index.html
+++ b/jogo-velha/index.html
@@ -90,12 +90,12 @@
     </div>
     <main class="center">
       <div class="score">
-        <spam class="score-player1">01</spam>
+        <spam class="score-player1">00</spam>
         <div class="wrapper-score">
           <h1 class="score-title">Placar</h1>
-          <h2 class="score-player"></h2>
+          <h2 class="score-player">Nome do Jogador</h2>
         </div>
-        <spam class="score-player2">02</spam>
+        <spam class="score-player2">00</spam>
       </div>
 
       <div class="wrapper-square">
