--- a/curso-js/treinamento/ex05/index.html
+++ b/curso-js/treinamento/ex05/index.html
@@ -13,11 +13,12 @@
 
     <section>
       <div>
-        <p>Número: <input type="text" name="numero" id="numero"><input type="button" value="gerar-tabuada"></p>
-
+        <p>Número: <input type="text" name="ipt-numero" id="ipt-numero"><input type="button" id="btn-gerar" value="Gerar"></p>
       </div>
-      <div class="">
+      <div class="resultado">
+        <ul class="list-resultado">
 
+        </ul>
       </div>
     </section>
 
