--- a/curso-js/caderno/index.html
+++ b/curso-js/caderno/index.html
@@ -121,5 +121,10 @@
          <p>switch(expressão){</br>#se-a-expressao-for#</br>case valor 1:</br> break</br> #se-a-expressao-for#</br> case valor2:</br> break</br>default:</br> break</br>}</p>
          <p>Dentro de cada bloco deve ser utilizado o comando break</p>
       </div>
+      <div class="emojis">
+         <h1>Emojis</h1>
+         <p>Para encontrar emojis podemos localizar seu código UTF <a href="https://unicode.org/emoji/charts/full-emoji-list.html">Clique</a></p>
+         <p>Para utilizar o emoji dentro da template string <strong>\u{1F449}	</strong></p>
+      </div>
    </body>
 </html>
