--- a/curso-js/treinamento/ex04/index.html
+++ b/curso-js/treinamento/ex04/index.html
@@ -15,24 +15,24 @@
       <div>
         <p>
           Inicio:
-          <input type="text" name="txt-inicio" id="txt-inicio" />
+          <input type="number" name="txt-inicio" id="txt-inicio" />
         </p>
 
         <p>
           Fim:
-          <input type="text" name="txt-fim" id="txt-fim" />
+          <input type="number" name="txt-fim" id="txt-fim" />
         </p>
 
         <p>
           Passo:
-          <input type="text" name="txt-passo" id="txt-passo"/>
+          <input type="number" name="txt-passo" id="txt-passo"/>
         </p>
 
-        <p><input type="button" value="contar" id="contar" /></p>
+        <p><input type="button" value="Contar" id="btn-contar" /></p>
       </div>
 
       <div>
-        <p id="resultado">Preparando contagem</p>
+        <p id="msg-resultado">Preparando contagem...</p>
       </div>
     </section>
     <footer>
