--- a/curso-js/treinamento/ex05/index.html
+++ b/curso-js/treinamento/ex05/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Calculadora</title>
+    <title>Tabuada</title>
   </head>
   <body>
     <header>
@@ -13,12 +13,12 @@
 
     <section>
       <div>
-        <p>Número: <input type="text" name="ipt-numero" id="ipt-numero"><input type="button" id="btn-gerar" value="Gerar"></p>
+        <p>Número: <input type="number" name="ipt-numero" id="ipt-numero"><input type="button" id="btn-gerar" value="Gerar Tabuada"></p>
       </div>
       <div class="resultado">
-        <ul class="list-resultado">
-
-        </ul>
+        <select name="list-resultado" id="list-resultado" size="10">
+          <option>Digite um número acima</option>
+        </select>
       </div>
     </section>
 
