--- a/curso-js/treinamento/ex04/index.html
+++ b/curso-js/treinamento/ex04/index.html
@@ -31,8 +31,8 @@
         <p><input type="button" value="Contar" id="btn-contar" /></p>
       </div>
 
-      <div>
-        <p id="msg-resultado">Preparando contagem...</p>
+      <div id="div-area">
+      
       </div>
     </section>
     <footer>
