--- a/curso-js/treinamento/ex05/index.html
+++ b/curso-js/treinamento/ex05/index.html
@@ -21,9 +21,8 @@
         </select>
       </div>
     </section>
-
     <footer>
-
+  <p>&copy; Curso em Vídeo</p>
     </footer>
     <script src="index.js"></script>
   </body>
