--- a/prof-marcos/jogo-velha-prof-marcos/index.html
+++ b/prof-marcos/jogo-velha-prof-marcos/index.html
@@ -16,44 +16,90 @@
             <input class="user-field" placeholder="Jogador 01" />
           </div>
           <div class="user-field-wrapper">
-              <input class="user-field" placeholder="Jogador 02" />
-              <button class="switcher">
-                  <div class="switcher-ball"></div>
-              </button>
+            <input class="user-field" placeholder="Jogador 02" />
+            <button class="switcher">
+              <div class="switcher-ball"></div>
+            </button>
           </div>
         </div>
         <h4 class="match-type-title">Tipo de Partida</h4>
         <div class="match-type-box">
-            <span class="match-type-text">Melhor de 3</span>
-            <button class="switcher">
-                <div class="switcher-ball"></div>
-            </button>
-            <span class="match-type-text">Melhor de 5</span>
+          <span class="match-type-text">Melhor de 3</span>
+          <button class="switcher">
+            <div class="switcher-ball"></div>
+          </button>
+          <span class="match-type-text">Melhor de 5</span>
         </div>
         <button class="button-play">Jogar</button>
         <h4 class="match-historic-title">Histórico de partidas</h4>
         <ul class="match-historic-list">
-            <li class="match-historic-item">
-                <div class="match-historic-winner-box">
-                    <span class="match-historic-winner-title">Vencedor</span>
-                    <span class="match-historic-winner-title">Nome do Jogador</span>
-                </div> 
-                <span class="match-historic-separator">Cenário</span>
-                <div class="match-historic-board"></div>
-                <span class="match-historic-board-item">O</span>
-                <span class="match-historic-board-item">X</span>
-                <span class="match-historic-board-item">O</span>
-                <span class="match-historic-board-item">X</span>
-                <span class="match-historic-board-item">O</span>
-                <span class="match-historic-board-item">X</span>
-                <span class="match-historic-board-item"></span>
-                <span class="match-historic-board-item">X</span>
-                <span class="match-historic-board-item">O</span>
-            </li>
+          <li class="match-historic-item">
+            <div class="match-historic-winner-box">
+              <span class="match-historic-winner-title">Vencedor</span>
+              <span class="match-historic-winner">Nome do Jogador</span>
+            </div>
+            <span class="match-historic-separator">Cenário</span>
+            <div class="match-historic-board">
+              <span class="match-historic-board-item">O</span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item">O</span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item">O</span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item"></span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item">O</span>
+            </div>
+          </li>
+
+          <li class="match-historic-item">
+            <div class="match-historic-winner-box">
+              <span class="match-historic-winner-title">Vencedor</span>
+              <span class="match-historic-winner">Nome do Jogador</span>
+            </div>
+            <span class="match-historic-separator">Cenário</span>
+            <div class="match-historic-board">
+              <span class="match-historic-board-item">O</span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item">O</span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item">O</span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item"></span>
+              <span class="match-historic-board-item">X</span>
+              <span class="match-historic-board-item">O</span>
+            </div>
+          </li>
         </ul>
+        <div class="reset-wrapper">
+          <button class="reset-game">Reiniciar</button>
+        </div>
       </section>
 
-      <section class="container-center"></section>
+      <section class="container-center">
+        <div class="score-board">
+          <span class="score-player01">01</span>
+
+          <div class="wrraper-placard">
+            <span class="placard-title">Placar</span>
+            <span class="placard-player">Nome Jogador</span>
+          </div>
+          <span class="score-player02">01</span>
+        </div>
+
+        <div class="field-main">
+          <span class="field">O</span>
+          <span class="field">X</span>
+          <span class="field">O</span>
+          <span class="field">X</span>
+          <span class="field">O</span>
+          <span class="field">X</span>
+          <span class="field"></span>
+          <span class="field">X</span>
+          <span class="field">O</span>
+        </div>
+
+      </section>
 
       <section class="container-right"></section>
     </main>
