--- a/prof-marcos/aulas/jogo-velha-prof-marcos/index.html
+++ b/prof-marcos/aulas/jogo-velha-prof-marcos/index.html
@@ -88,15 +88,15 @@
         </div>
 
         <div class="field-main">
-          <span class="field">O</span>
-          <span class="field">X</span>
-          <span class="field">O</span>
-          <span class="field">X</span>
-          <span class="field">O</span>
-          <span class="field">X</span>
-          <span class="field"></span>
-          <span class="field">X</span>
-          <span class="field">O</span>
+          <span class="field field00"></span>
+          <span class="field field01"></span>
+          <span class="field field02"></span>
+          <span class="field field03"></span>
+          <span class="field field04"></span>
+          <span class="field field05"></span>
+          <span class="field field06"></span>
+          <span class="field field07"></span>
+          <span class="field field08"></span>
         </div>
       </section>
 
