revisao objetos novo projeto

--- a/prof-marcos/desafios/aula-objetos/index.html
+++ b/prof-marcos/desafios/aula-objetos/index.html
@@ -15,25 +15,39 @@
           <h3 class="blog-sub-title">From our blog</h3>
           <h2 class="blog-title">Latest article</h2>
         </div>
-        
         <a href="#" class="links"
           ><h4 class="click-add-article">
             See more articles <i class="fas fa-chevron-right fa-sm"></i></h4
         ></a>
-
         <div class="wrapper-form">
           <span class="new-articles-title">add a new article:</span>
           <form class="add-new-article">
             <ul>
-              <label class="form-label">Image: <input class="form-image" type="img" placeholder="insert link image"/></label>
-              <label class="form-label">Title: <input class="form-title" type="text" placeholder="insert title article"/></label>
-              <label class="form-label">Content: <input class="form-content" type="text" placeholder="insert content article"/></label>
+              <label class="form-label"
+                >Image:
+                <input
+                  class="form-image"
+                  type="img"
+                  placeholder="insert link image"
+              /></label>
+              <label class="form-label"
+                >Title:
+                <input
+                  class="form-title"
+                  type="text"
+                  placeholder="insert title article"
+              /></label>
+              <label class="form-label"
+                >Content:
+                <input
+                  class="form-content"
+                  type="text"
+                  placeholder="insert content article"
+              /></label>
               <button class="form-add-button">submit</button>
             </ul>
           </form>
         </div>
-            
-
         <div class="panel-articles"></div>
       </section>
     </main>
