update class objects

--- a/prof-marcos/desafios/aula-objetos-revisao01/index.html
+++ b/prof-marcos/desafios/aula-objetos-revisao01/index.html
@@ -74,10 +74,22 @@
           </div>
         </div> -->
       </section>
-      <section class="new-products">
+      <section class="insert-products">
         <div class="wrapper-title-new-products">
           <span class="new-product-title">INSERT A NEW PRODUCT</span>
           <hr class="new-product-line" />
+        </div>
+
+        <div class="wrapper-panel-insert">
+          <span class="form-title">FILL THE FORM</span>
+          <form class="form-insert-product">
+            <label class="label" for="id-product">ID Product: </label>  <input class="input" id="id-product" type="number" placeholder="insert bar code">
+            <label class="label" for="id-image">Image Product: </label> <input class="input" id="id-image" type="text" placeholder="insert link">
+            <label class="label" for="id-name">Name Product: </label> <input class="input" id="id-name" type="text" placeholder="insert name product">
+            <label class="label" for="id-price">Price Product: </label> <input class="input" id="id-price" type="text" placeholder="insert price product">
+            <label class="label" >I reviewed the price: <input type="checkbox"></label> 
+            <input class="btn-submit" type="submit" value="SEND PRODUCT">
+          </form>
         </div>
       </section>
     </main>
