--- a/prof-marcos/desafios/aula-objetos-v1/index.html
+++ b/prof-marcos/desafios/aula-objetos-v1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Document</title>
+    <title>Object Class</title>
   </head>
   <body>
     <main class="container">
