bug-fixed-crud-v1

--- a/prof-marcos/desafios/aula-crud-v1/index.html
+++ b/prof-marcos/desafios/aula-crud-v1/index.html
@@ -11,7 +11,7 @@
   <body>
     <main class="container">
       <section class="travel-information">
-        <div class="box-information">
+        <!-- <div class="box-information">
           <div class="wrapper-profile">
             <img
               class="photo-profile"
@@ -49,15 +49,15 @@
               Motorista esta <span class="text-active">ativo</span> na
               plataforma
             </p>
-            <button class="edit-information">PESQUISAR OUTRO MOTORISTA</button>
-          </div>
+
+          </div> -->
           <div class="box-search">
+            <button class="edit-information">PESQUISAR MOTORISTA</button>
             <form class="form-search">
               <label class="label" for="value-cnh">CNH: </label>
-              <input class="input" id="value-cnh" placeholder="Insira o número da CNH">
+              <input class="input" id="value-cnh" placeholder="Insira o número da CNH" autocomplete="off">
               <input type="submit" class="input input-submit" id="search-cnh" value="Buscar">
-            </form>
-            
+            </form>           
           </div>
         </div>
       </section>
