bug-fixed-crud-v1

--- a/prof-marcos/desafios/aula-crud-v1/index.html
+++ b/prof-marcos/desafios/aula-crud-v1/index.html
@@ -55,7 +55,7 @@
             <button class="edit-information">PESQUISAR MOTORISTA</button>
             <form class="form-search">
               <label class="label" for="value-cnh">CNH: </label>
-              <input class="input" id="value-cnh" placeholder="Insira o número da CNH" autocomplete="off">
+              <input class="input" id="value-cnh" placeholder="Insira o número da CNH" autocomplete="off" required>
               <input type="submit" class="input input-submit" id="search-cnh" value="Buscar">
             </form>           
           </div>
